k8s/platform/ingress/infra/overlays/local/traefik-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: traefik-dashboard
spec:
  parentRefs:
    - name: traefik-pgw
      sectionName: http

    - name: traefik-pgw
      sectionName: https

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

        - path:
            type: PathPrefix
            value: /dashboard

      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: api@internal
